--- a/.github/workflows/spark.yml
+++ b/.github/workflows/spark.yml
@@ -34,3 +34,5 @@ jobs:
         hadoop-version: '3'
 
     - run: spark-submit --version
+    - run: spark-submit --master local hello-spark.py
+    - run: ls -la  
