--- a/.github/workflows/spark.yml
+++ b/.github/workflows/spark.yml
@@ -44,7 +44,7 @@ jobs:
     - name: GIT commit and push docs
       env: 
         CI_COMMIT_MESSAGE: save spark results
-        CI_COMMIT_AUTHOR: jose05m 
+        CI_COMMIT_AUTHOR: Jose05M 
       run: |
         git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
         git config --global user.email "eduardo.mtz1403@gmail.com"
