--- a/.github/workflows/spark.yml
+++ b/.github/workflows/spark.yml
@@ -43,7 +43,7 @@ jobs:
     - run: ls -la 
     - name: GIT commit and push docs
       env: 
-        CI_COMMIT_MESSAGE: save spark results
+        CI_COMMIT_MESSAGE: results
         CI_COMMIT_AUTHOR: Jose05M 
       run: |
         git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
