--- a/spark.yml
+++ b/spark.yml
@@ -15,7 +15,40 @@ jobs:
   spark:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
+
     steps:
     - uses: actions/checkout@v4
     - run: ls -la  
+    
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+
+    - uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: temurin
+
+    - uses: vemonet/setup-spark@v1
+      with:
+        spark-version: '3.5.3'
+        hadoop-version: '3'
+
+    - run: spark-submit --version
+    - run: spark-submit --master local hello-spark.py
+    - run: ls -la  
+    - name: GIT commit and push docs
+      env: 
+        CI_COMMIT_MESSAGE: save spark results
+        CI_COMMIT_AUTHOR: Jose05M 
+      run: |
+        git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
+        git config --global user.email "eduardo.mtz1403@gmail.com"
+        git add results
+        git commit -m "${{ env.CI_COMMIT_MESSAGE }}"
+        git push
 
